[versioneer]
VCS = git
style = pep440
versionfile_source = sisl/_version.py
versionfile_build = sisl/_version.py
tag_prefix = v
parentdir_prefix = sisl-

[metadata]
description-file = README.md

[aliases]
# Create an alias for testing
test=pytest


[tool:pytest]
testpaths = sisl
markers =
    slow: mark a test as slow
#filterwarnings =
#    error:Sparse:FutureWarning
#    error:The SparseArray:FutureWarning
