# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[metadata]
name = sisl

[options.entry_points]
console_scripts =
  sgeom = sisl.geometry:sgeom
  sgrid = sisl.grid:sgrid
  sdata = sisl.utils._sisl_cmd:sisl_cmd
  stoolbox = sisl_toolbox.cli:stoolbox_cli


[flake8]
max-complexity = 18
max-line-length = 110
ignore =
    E203,  # space before : (needed for [..., :] array slices)
    E402,  # module level import not at top of file (used for optional dependencies
    B005,  # strip with multi-character (this is fine, we know how it works)
    B008,  # allow function calls as argument defaults
    B009,  # setattr is used to side-step mypy
    B010,  # getattr is used to side-step mypy
    B011,  # tests use assert False
    B015   # tests use comparisons but not their returned value
