# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[metadata]
name = sisl
version = attr: sisl.__version__
license = MPL-2.0
readme = file: README.md
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
   Homepage = https://zerothi.github.io/sisl
   Documentation = https://zerothi.github.io/sisl

[options]
zip_safe = False
python_requires = >= 3.7

install_requires =
    # these two requirements are work-arounds for windows installations
    numpy>=1.19.5 ; platform_system == 'Windows' and python_version <= '3.9'
    numpy>=1.21.5 ; platform_system == 'Windows' and python_version >= '3.10'
    numpy>=1.13 ; platform_system != 'Windows'
    scipy>=0.18
    netCDF4
    pyparsing>=1.5.7

[options.entry_points]
console_scripts =
  sgeom = sisl.geometry:sgeom
  sgrid = sisl.grid:sgrid
  sdata = sisl.utils._sisl_cmd:sisl_cmd
  stoolbox = sisl_toolbox.cli:stoolbox_cli

[options.extras_require]
analysis = xarray>=0.10.0; tqdm
viz = dill >= 0.3.2; pathos; pandas; xarray >= 0.10.0; scikit-image; plotly; matplotlib; ase
viz-plotly = dill >= 0.3.2; pathos; pandas; xarray >= 0.10.0; scikit-image; plotly
viz-matplotlib = dill >= 0.3.2; pathos; pandas; xarray >= 0.10.0; scikit-image; matplotlib
viz-blender = dill >= 0.3.2; pathos; pandas; xarray >= 0.10.0; scikit-image;
viz-ase = dill >= 0.3.2; pathos; pandas; xarray >= 0.10.0; scikit-image; ase
test =
   pytest
   pytest-cov
   pytest-env
   pytest-faulthandler
   coveralls
   tqdm
   dill >= 0.3.2
   pathos
   pandas
   xarray >= 0.10.0
   scikit-image
   plotly
   matplotlib
   ase

[flake8]
max-complexity = 18
max-line-length = 110
ignore =
    E203,  # space before : (needed for [..., :] array slices)
    E402,  # module level import not at top of file (used for optional dependencies
    B005,  # strip with multi-character (this is fine, we know how it works)
    B008,  # allow function calls as argument defaults
    B009,  # setattr is used to side-step mypy
    B010,  # getattr is used to side-step mypy
    B011,  # tests use assert False
    B015   # tests use comparisons but not their returned value
